# almond

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  SUMMARY.md  pyproject.toml  pytest.ini
.github/workflows/: tests.yml
almond/: __init__.py  geometry.py  interop.py  kernels.cu  kernels_spin.cu  plan.py  reference.py  reference_spin.py  simaster.py
bench/: bench_batched.py  bench_batched_modes.py  bench_inverse.py  bench_modes.py  bench_synthesis.py  bench_v02.py  debug_stage.py  make_batched_table.py  make_results_table.py  probe_hang.py  probe_legendre.py  run_debug.sh  run_v04.sh
report/: batched_table.tex  report.tex  results_table.tex  v02_table.tex
tests/: test_gpu.py  test_reference.py  test_simaster.py
