[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "almond"
version = "0.4.0"
description = "GPU spherical harmonic transforms for HEALPix (ducc0-exact, CuPy/CUDA)"
requires-python = ">=3.10"
dependencies = ["numpy", "cupy-cuda12x"]

[tool.setuptools]
packages = ["almond"]

[tool.setuptools.package-data]
almond = ["*.cu"]
